# xyzrobotics_projects

./: .bashrc  .uuid  Insomnia_2024-03-23.json  Insomnia_2024-04-16.json  Insomnia_2024-05-17.json  Insomnia_2024-10-19.json  Insomnia_2024-11-08.json  Insomnia_2024-11-13.json  README.md  app.py  barcode_sku_map.json  cleanup.service  cleanup.sh  ls_eye_to_hand.json  nodes.ini  pallet_data.json  test.py  test2.py  wcs_pallet_show.py
xyz_logistics_hmi_back/static/abb_irb6700_support/: package.xml
xyz_logistics_hmi_back/static/abb_irb6700_support/IKfast/: irb6700_150_320.urdf  irb6700_175_305.urdf  irb6700_200_260.urdf  irb6700_235_265.urdf  irb6700_300_270.urdf
xyz_logistics_hmi_back/static/abb_irb6700_support/cmake/: abb_irb6700_supportConfig.cmake
xyz_logistics_hmi_back/static/abb_irb6700_support/launch/: load_irb6700_150_320.launch  load_irb6700_205_280.launch  load_irb6700_245_300.launch  test_irb6700_175_305.launch  test_irb6700_205_280.launch  test_irb6700_235_265.launch  test_irb6700_245_300.launch
xyz_logistics_hmi_back/static/abb_irb6700_support/meshes/irb6700_150_320/collision/: base_link.stl  link_1.stl  link_4.stl  link_5.stl  link_6.stl
xyz_logistics_hmi_back/static/abb_irb6700_support/meshes/irb6700_150_320/visual/: base_link.stl  link_4.stl  link_5.stl
xyz_logistics_hmi_back/static/abb_irb6700_support/meshes/irb6700_155_285/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl
xyz_logistics_hmi_back/static/abb_irb6700_support/meshes/irb6700_155_285/visual/: base_link.stl  link_2.stl  link_3.stl  link_4.stl
xyz_logistics_hmi_back/static/abb_irb6700_support/meshes/irb6700_175_305/collision/: link_4.stl  (+2 more)
xyz_logistics_hmi_back/static/abb_irb6700_support/urdf/: common_materials.xacro  irb6700_150_320_macro.xacro  irb6700_155_285.xacro  irb6700_155_285_macro.xacro  irb6700_200_260_macro.xacro  irb6700_205_280.xacro  irb6700_235_265_macro.xacro  irb6700_245_300.xacro  irb6700_245_300_macro.xacro  irb6700_300_270_macro.xacro
xyz_logistics_hmi_back/static/kuka_kr180_support/: package.xml
xyz_logistics_hmi_back/static/kuka_kr180_support/IKfast/: kr180_r3200_pa.urdf
xyz_logistics_hmi_back/static/kuka_kr180_support/config/: rviz.rviz
xyz_logistics_hmi_back/static/kuka_kr180_support/launch/: load_kr180_r3200_pa.launch
xyz_logistics_hmi_back/static/kuka_kr180_support/urdf/: kr180_r2900_2.xacro  kr180_r2900_2_macro.xacro  kr180_r3200_pa.xacro  kr180_r3200_pa_macro.xacro
(+5178 files in other folders)
