<package format="2">
  <name>abb_irb6700_support</name>
  <version>1.0.0</version>
  <description>
    <p>
      abb_irb6700_support
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>H1</author>
  <maintainer email="all@xyzrobotics.ai">all</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <test_depend version_gte="1.9.55">roslaunch</test_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>support_package</tag>
        <tag>description</tag>
        <tag>abb</tag>
        <tag>industrial</tag>
      </tags>
    </rosindex>
  </export>
</package>