<package format="2">
  <name>kuka_kr180_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA kr180 R3200 PA manipulators. This currently includes the KUKA kr180 R3200 KSS only.
    </p>
    <p><b>Specifications</b>:</p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Zikun Yu</author>
  <maintainer email="all@xyzrobotics.ai">all</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <test_depend version_gte="1.9.55">roslaunch</test_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>support_package</tag>
        <tag>description</tag>
        <tag>kuka</tag>
        <tag>industrial</tag>
      </tags>
    </rosindex>
  </export>
</package>